fix: update font size for secondary date picker item for better readability

--- a/src/components/date-picker/disco-date-picker.scss
+++ b/src/components/date-picker/disco-date-picker.scss
@@ -19,5 +19,5 @@
 }
 
 .date-picker-secondary {
-    font-size: 17px;
+    font-size: 18px;
 }
